Resolving PR Comments

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/reset/admin-initiated-password-reset.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/reset/admin-initiated-password-reset.hbs
@@ -13,12 +13,37 @@
         </div>
         <form class="form-horizontal" role="form" method="post">
 
-            <label class="control-label">Select password reset method</label>
+            <label class="control-label">{{i18n "reset.select.method"}}</label>
     <span class="fw-stack">
     <i class="fw fw-circle-outline fw-stack-2x"></i>
     <i class="fw fw fw-question fw-stack-1x"></i>
 </span>
 
+            {{#if success}}
+                {{#if message}}
+                    <div class="alert alert-success" role="alert">
+                        <i class="icon fw fw-success"></i><strong>{{i18n "password.reset.success"}}</strong>
+                        {{message}}
+                        <button type="button" class="close" aria-label="close" data-dismiss="alert">
+                <span aria-hidden="true">
+                    <i class="fw fw-cancel"></i>
+                </span>
+                        </button>
+                    </div>
+                {{/if}}
+            {{else}}
+                {{#if message}}
+                    <div class="alert alert-danger" role="alert">
+                        <i class="icon fw fw-error"></i><strong>{{i18n "password.reset.failure"}}</strong>
+                        {{message}}
+                        <button type="button" class="close" aria-label="close" data-dismiss="alert">
+                <span aria-hidden="true">
+                    <i class="fw fw-cancel"></i>
+                </span>
+                        </button>
+                    </div>
+                {{/if}}
+            {{/if}}
 
             <!-- collapse -->
             <div id="group-1" class="panel-group panel-extended add-margin-bottom-2x" role="tablist"
@@ -31,8 +56,8 @@
                              <span class="helper"></span> 
                              </label>
                         <h4 class="panel-title flex-item">
-                            <span class="heading">Offline OTP</span>
-                            <span class="description truncate" title="">Admin initiated password reset via offline passcode</span> 
+                            <span class="heading">{{i18n "reset.select.with.offline.passcode"}}</span>
+                            <span class="description truncate" title="">{{i18n "reset.offline.passcode.description"}}</span> 
                         </h4>
 
                         <div class="status flex-item"></div>
@@ -46,7 +71,7 @@
                                                data-schemaformat="password" type="hidden">
                                     </div>
                                     <div>
-                                        <button class="btn btn-primary" type="submit" id="genbtn">Generate</button>
+                                        <button class="btn btn-primary" type="submit" id="genbtn">{{i18n "reset.generate"}}</button>
                                     </div>
                                 </div>
                             </div>
@@ -63,8 +88,8 @@
                              <span class="helper"></span> 
                              </label>
                         <h4 class="panel-title flex-item">
-                            <span class="heading">Email OTP</span>
-                       <span class="description truncate" title="">Admin initiated password reset via Email OTP
+                            <span class="heading">{{i18n "reset.select.with.email.OTP"}}</span>
+                       <span class="description truncate" title="">{{i18n "reset.email.otp.description"}}
                        </span> 
                         </h4>
 
@@ -86,8 +111,8 @@
                              <span class="helper"></span> 
                              </label>
                         <h4 class="panel-title flex-item">
-                            <span class="heading">Reset Link</span>
-                       <span class="description truncate" title="">Admin initiated password reset via Email OTP
+                            <span class="heading">{{i18n "reset.select.with.reset.link"}}</span>
+                       <span class="description truncate" title="">{{i18n "reset.reset.link.description"}}
                        </span> 
                         </h4>
 
