Adding success/danger alerts

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/reset/admin-initiated-password-reset.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/reset/admin-initiated-password-reset.hbs
@@ -23,7 +23,7 @@
                 {{#if message}}
                     <div class="alert alert-success" role="alert">
                         <i class="icon fw fw-success"></i><strong>{{i18n "password.reset.success"}}</strong>
-                        {{message}}
+                        {{i18n "successfully.persisted"}}
                         <button type="button" class="close" aria-label="close" data-dismiss="alert">
                 <span aria-hidden="true">
                     <i class="fw fw-cancel"></i>
@@ -35,7 +35,7 @@
                 {{#if message}}
                     <div class="alert alert-danger" role="alert">
                         <i class="icon fw fw-error"></i><strong>{{i18n "password.reset.failure"}}</strong>
-                        {{message}}
+                        {{i18n "error.while.persisting"}}
                         <button type="button" class="close" aria-label="close" data-dismiss="alert">
                 <span aria-hidden="true">
                     <i class="fw fw-cancel"></i>
