Resolved PR comments

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/ask-password/ask-password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/ask-password/ask-password.hbs
@@ -5,16 +5,16 @@
             <div class="form-group">
                 <label class="control-label">{{i18n "users.email.address"}}
                     <span class="requiredAstrix"> *</span></label>
-                <input type="email" class="form-control email" id="askPwdEmail" name="askPwdEmail"
-                       placeholder={{i18n "sample.email.address"}}>
+                <input type="email" class="form-control email" id="txtBoxAskPwdViaEmail" name="askPwdEmail"
+                       placeholder={{i18n "users.email.address.sample"}}>
             </div>
 
             <div class="form-group">
-                <label class="control-label">{{i18n "confirm.users.email.address"}}
+                <label class="control-label">{{i18n "users.email.address.confirm"}}
                     <span class="requiredAstrix"> *</span></label>
-                <input type="email" class="form-control email" id="askPwdDuplicateEmail"
+                <input type="email" class="form-control email" id="txtBoxAskPwdViaEmailDuplicate"
                        name="askPwdDuplicateEmail"
-                       placeholder={{i18n "sample.email.address"}}>
+                       placeholder={{i18n "users.email.address.sample"}}>
             </div>
 
         </div>
