Adapting PR comments.

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/groups/edit.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/groups/edit.hbs
@@ -51,7 +51,7 @@
 
         <ul id="tab" class="nav nav-tabs tabs">
             <li class="active"><a href="#general" title="General" data-toggle="tab"><i class="fw fw-task"
-                                                                                       title="General"></i> {{i18n "groups.general"}}
+                                                                                       title="General"></i> {{i18n "groups.general.details"}}
             </a></li>
             <li><a href="#users" data-toggle="tab" title="Users"><i class="fw fw-user"
                                                                     title="Users"></i> {{i18n "groups.users"}} </a></li>
