--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/ask-password/ask-password.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/ask-password/ask-password.hbs
@@ -5,7 +5,7 @@
             <div class="form-group">
                 <label class="control-label">{{i18n "users.email.address"}}
                     <span class="requiredAstrix"> *</span></label>
-                <input type="email" class="form-control email" id="txtBoxAskPwdViaEmail" name="askPwdEmail"
+                <input type="email" class="form-control email" id="txtBoxAskPwdViaEmail" name="txtBoxAskPwdViaEmail"
                        placeholder={{i18n "users.email.address.sample"}}>
             </div>
 
@@ -13,7 +13,7 @@
                 <label class="control-label">{{i18n "users.email.address.confirm"}}
                     <span class="requiredAstrix"> *</span></label>
                 <input type="email" class="form-control email" id="txtBoxAskPwdViaEmailDuplicate"
-                       name="askPwdDuplicateEmail"
+                       name="txtBoxAskPwdViaEmailDuplicate"
                        placeholder={{i18n "users.email.address.sample"}}>
             </div>
 
