Adding tests skeleton. Page objects and action objects needs to be created and tests needs to be implemented once the UI fine tuning is done.

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/groups/edit.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/groups/edit.hbs
@@ -102,7 +102,8 @@
                             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
                                 <label for="input-groupname" class="control-label">{{i18n "groups.name"}}
                                     <span class="requiredAstrix"> *</span></label>
-                                <input class="form-control" name="input-groupname" id="input-groupname" placeholder="Group Name" type="text">
+                                <input class="form-control" name="input-groupname" id="input-groupname"
+                                       placeholder="Group Name" type="text">
                                 {{#defineZone "groupExistsError-area"}}
                                     <div id="groupExistsError">
                                         <!-- Here is generated content for error when group already exists -->
@@ -114,7 +115,8 @@
                             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-5">
                                 <label for="input-description" class="control-label">{{i18n "groups.description"}}
                                     <span class="requiredAstrix"> *</span></label>
-                                <input class="form-control" name="input-description" id="input-description" placeholder="Group Description"
+                                <input class="form-control" name="input-description" id="input-description"
+                                       placeholder="Group Description"
                                        type="text">
                             </div>
                         </div>
@@ -132,106 +134,45 @@
                         <div class="page-header">
                             <h1>{{i18n "overview.users"}}</h1>
                         </div>
-                        <form class="form-horizontal" method="post" id="filterListForm" action="?list#list">
-                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
-                                <div class="row">
-                                    <table class="table table-striped table-hover table-responsive list-table display responsive nowrap data-table" id="users-sample">
-                                        <thead class="block">
-                                        <tr class="sort-row">
-                                            <th class="content-fill no-sort"></th>
-                                            <th>Username</th>
-                                            <th>Status</th>
-                                            <th>Groups</th>
-                                            <th>Roles</th>
-                                            <th class="no-sort"></th>
-                                        </tr>
-                                        <tr class="filter-row-custom">
-                                            <th data-for="Type"></th>
-                                            <th data-for="Domain" class="text-filter"></th>
-                                            <th class="select-filter">
-                                                <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5">
-                                                    Filter By Claim
-                                                    <select class="form-control" id="claimSelector" onChange="getClaimUri()">
-                                                        <option value=""></option>
-                                                        {{#each claimProfile}}
-                                                            <option name="claim-uri-{{claimURI}}" id="claim-uri-{{claimURI}}" value="{{claimURI}}">{{displayName}}</option>
-                                                        {{/each}}
-                                                    </select>
-                                                    <input class="form-control" type="text" id="claim-filter" name="claim-filter" placeholder="Value"/>
-                                                </div>
-                                            </th>
-                                            <th data-for="Office" class="select-filter"></th>
-                                            <th data-for="Age" class="select-filter"></th>
-                                            <th>
-                                                <select class="form-control" id="domainSelector" onChange="getDomain()">
-                                                    {{#each domains}}
-                                                        <option value={{this}}>{{this}}</option>
-                                                    {{/each}}
-                                                </select>
-                                            </th>
-                                            <input type="hidden" name="action" value="filter-list">
-                                            <input type="hidden" id="claim-uri" name="claim-uri" value="">
-                                            <input type="hidden" id="domain-name" name="domain-name" value="">
-                                            <th class="text-right content-fill text-left-on-grid-view no-wrap">
-                                                <button class="btn btn-primary " type="submit">
-                                                    <i class="fw fw fw-search search-icon add-margin-right-1x"></i>
-                                                </button>
-                                            </th>
-                                        </tr>
-                                        <tr class="bulk-action-row">
-                                            <th colspan="8">
+                        <!--assign users-->
+                        <div class="panel-body">
 
-                                                <ul class="tiles">
-                                                    <li class="square">
-                                                        <a class="btn square-element" data-click-event="delete-selected-rows">
-                                <span class="icon fw-stack">
-                                    <i class="fw fw-ring fw-stack-2x"></i>
-                                    <i class="fw fw-delete fw-stack-1x"></i>
-                                </span>
-                                                            Delete Selected
-                                                        </a>
-                                                    </li>
-                                                    <li class="square">
-                                                        <a class="btn square-element" data-toggle="modal" data-target="#modalDemo">
-                                <span class="icon fw-stack">
-                                    <i class="fw fw-ring fw-stack-2x"></i>
-                                    <i class="fw fw-edit fw-stack-1x"></i>
-                                </span>
-                                                            Edit Selected
-                                                        </a>
-                                                    </li>
-                                                </ul>
+                            <table class="table table-striped table-hover table-responsive list-table display responsive nowrap data-table selected-users-dataTable"
+                                   id="selected-users-dataTable">
+                                <thead class="block">
+                                <tr class="filter-row-custom">
+                                    <th class="select-filter">
+                                    </th>
+                                    <th class="text-right content-fill text-left-on-grid-view no-wrap">
+                                        <button class="btn btn-primary " id="filter-btn" type="submit">
+                                            <i class="fw fw fw-search search-icon add-margin-right-1x"></i>
+                                        </button>
+                                    </th>
+                                </tr>
 
-                                                <!-- Modal -->
-                                                <div class="modal fade" id="modalDemo" tabindex="-1" role="dialog" aria-labelledby="modalDemo">
-                                                    <div class="modal-dialog" role="document">
-                                                        <div class="modal-content">
-                                                            <div class="modal-header">
-                                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span></button>
-                                                                <h4 class="modal-title" id="myModalLabel">Edit Selected</h4>
-                                                            </div>
-                                                            <div class="modal-body">
-                                                                You about perform a bulk operation, please confirm to proceed.
-                                                            </div>
-                                                            <div class="modal-footer">
-                                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                                <button type="button" class="btn btn-primary">Save changes</button>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
+                                </thead>
+                                <tbody>
 
-                                            </th>
-                                        </tr>
-                                        </thead>
-                                        <tbody>
-                                        <!-- Handlebars Template Appends Here -->
-                                        </tbody>
-                                    </table>
+                                <!-- Handlebars Template Appends Here -->
+                                </tbody>
+                            </table>
 
+                            <!-- button -->
+                            <form class="form-horizontal">
+                                <div class="form-group">
+                                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                        <div class="input-group input-wrap has-form-control-btn">
+                                            <button type="button" class="btn btn-primary" data-toggle="modal"
+                                                    data-target="#modalDelete">
+                                                {{i18n "assign.users"}}
+                                            </button>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                        </form>
+                            </form>
+                            <!-- /button -->
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -241,6 +182,73 @@
                 </div>
             </div>
         </div>
+
+
+        <!-- modal -->
+        <div class="modal fade" id="modalDelete" tabindex="-1" role="dialog" aria-labelledby="modalDemo">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content clearfix">
+
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><i
+                                class="fw fw-cancel"></i></button>
+                        <h3 class="modal-title" id="deleteModalLabel">{{i18n "assign.users"}}</h3>
+                    </div>
+                    <div class="modal-body add-margin-top-2x add-margin-bottom-2x">
+                        <div class="body-wrapper">
+                            <div class="page-header">
+                                <h1>{{i18n "overview.users"}}</h1>
+                            </div>
+                            <table class="table table-striped table-hover table-responsive list-table display responsive nowrap data-table user-select-dataTable"
+                                   id="groups-table">
+                                <thead class="block">
+                                <tr class="sort-row">
+                                    <th class="content-fill no-sort"></th>
+                                    <th class="no-sort">{{i18n "list.actions"}}</th>
+                                </tr>
+
+                                <tr class="filter-row-custom">
+                                    <th class="select-filter">
+                                    </th>
+                                    <th data-for="Start"><input type="number" id="offset-value"
+                                                                name="offset-value" class="short-input"
+                                                                value="0"/></th>
+                                    <th data-for="Maximum Records"><input type="number" id="length-value"
+                                                                          name="length-value"
+                                                                          class="short-input" value="500"/>
+                                    </th>
+                                </tr>
+
+                                </thead>
+                                <tbody>
+
+                                <!-- Handlebars Template Appends Here -->
+                                </tbody>
+                            </table>
+                            <form class="form-horizontal" method="post" id="filterListForm">
+                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-8">
+                                    <input type="hidden" id="action" name="action" value="filter-list">
+                                    <input type="hidden" id="claim-uri" name="claim-uri" value="">
+                                    <input type="hidden" id="domain-name" name="domain-name" value="">
+                                    <div class="row">
+
+
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <form class="form-horizontal" method="post" id="filterListForm1">
+                            <button type="button" class="btn btn-primary save">{{i18n "save"}}</button>
+                            <button type="button" class="btn btn-default"
+                                    data-dismiss="modal">{{i18n "cancel"}}</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /modal -->
 
 
     </div>
