--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/groups/index.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/groups/index.hbs
@@ -4,46 +4,24 @@
 {{title "Groups | " @config.appName}}
 {{css "css/admin-portal.css"}}
 
+{{#fillZone "usernavbar"}}
+    <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+            <li class="active">
+                <a href="add">
+                    <span class="icon fw-stack">
+                    <i class="fw fw-add fw-helper fw-helper-circle-outline"></i>
+                    </span>
+                    {{i18n "groups.add.header"}}
+                </a>
+            </li>
+        </ul>
+    </div><!--/.nav-collapse -->
+{{/fillZone}}
+
 {{#fillZone "content"}}
     <div class="body-wrapper">
         <div class="container-fluid">
-
-
-            <!-- navbar -->
-            <div class="navbar-wrapper" xmlns="http://www.w3.org/1999/html">
-                <nav class="navbar navbar-default">
-                    <div class="container-fluid">
-                        <div id="navbar" class="collapse navbar-collapse">
-                            <ul class="nav navbar-nav">
-                                <li>
-                                    <a href="/admin-portal/groups/">
-                                        <i class="fw fw-left fw-helper fw-helper-circle-outline"></i>
-                                        {{i18n "go.back"}}
-                                    </a>
-                                </li>
-                                <li class="active">
-                                    <a href="add">
-    <span class="icon fw-stack">
-    <i class="fw fw-add fw-helper fw-helper-circle-outline"></i>
-    </span>
-                                        {{i18n "groups.add.header"}}
-                                    </a>
-                                </li>
-                                <li class="active">
-                                    <a href="edit">
-    <span class="icon fw-stack">
-    <i class="fw fw-edit fw-helper fw-helper-circle-outline"></i>
-    </span>
-                                        {{i18n "groups.edit.header"}}
-                                    </a>
-                                </li>
-                            </ul>
-                        </div><!--/.nav-collapse -->
-                    </div>
-                </nav>
-            </div>
-            <!-- /navbar -->
-
 
             <div class="row">
                 <div class="col-md-12">
@@ -54,6 +32,9 @@
                         <h4><i class="icon fw fw-info"></i>{{i18n "no-groups.header"}}</h4>
                         <p>{{i18n "no-groups.body"}}</p>
                     </div>
+                    <a href="add" class="btn btn-primary">
+                        {{i18n "groups.add.header"}}
+                    </a>
                 </div>
             </div>
         </div>
