Admin Portal left navigation UI fixes

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/index.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/pages/index.hbs
@@ -21,12 +21,12 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="page-header">
-                        <h1>{{i18n "applications.header"}}</h1>
+                        <h1>{{i18n "overview.header"}}</h1>
                     </div>
-                    <div class="message message-info">
-                        <h4><i class="icon fw fw-info"></i>{{i18n "no-applications.header"}}</h4>
-                        <p>{{i18n "no-applications.body"}}</p>
-                    </div>
+                    <!--<div class="message message-info">-->
+                        <!--<h4><i class="icon fw fw-info"></i>{{i18n "no-applications.header"}}</h4>-->
+                        <!--<p></p>-->
+                    <!--</div>-->
                 </div>
             </div>
         </div>
