--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/navigation-menu/navigation-menu.hbs
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/fragments/navigation-menu/navigation-menu.hbs
@@ -1,13 +1,15 @@
+{{js "js/navigation-menu.js"}}
+
 <div class="sidebar-wrapper sidebar-nav" data-side="left" data-width="260" data-container=".page-content-wrapper"
      data-container-divide="true" data-fixed-offset-top="0" data-spy="affix" data-offset-top="80"
-     id="sidebar-theme">
+     id="sidebar-portal">
     <div class="nano ">
         <div class="nano-content ">
             <ul class="nav nav-pills nav-stacked pages">
                 {{#menu "main"}}
                     <li>
                         <a href="{{@contextPath}}{{link}}">
-                            {{#if icon}}<i class="{{icon}}"></i>{{/if}}{{i18n (text)}}
+                            {{#if icon}}<i class="{{icon}}"></i> {{/if}}<span class="add-margin-left-1x">{{i18n (text)}}</span>
                         </a>
                     </li>
                 {{/menu}}
@@ -19,7 +21,7 @@
     <nav class="navbar navbar-default navbar-doc" data-spy="affix" data-offset-top="80" data-offset-bottom="40">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-menu-toggle" data-toggle="sidebar" data-target="#sidebar-theme"
+                <a class="navbar-menu-toggle" data-toggle="sidebar" data-target="#sidebar-portal"
                    aria-expanded="false" rel="leftmenu-sidebar">
                     <span class="icon fw-stack">
                         <i class="fw fw-menu fw-stack-1x toggle-icon-left-arrow"></i>
