--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/public/css/admin-portal.css
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/public/css/admin-portal.css
@@ -555,10 +555,6 @@ label.error {
 .dark .recover-option-container hr, .recover-question-container hr{
     border: 1px solid #2E2A2B;
 }
-
-table.dataTable tr.filter-row-custom td,
-table.dataTable tr.filter-row-custom th {
-  padding: 0 8px 10px; }
 .table.list-table.grid-view .filter-row-custom,
 .table.list-table thead.block .filter-row-custom {
 background: #e4e4e4;
@@ -619,6 +615,12 @@ display: none; }
 }
 .thumbnail.icon{
     background-color: #34495e;
+}
+.grey-link{
+    color: #555;
+}
+.label-group{
+    background-color:#076c64;
 }
 
 /* TODO remove when the new datatable plugin is updated in UUF */
